# PWA-virtual-assistant-backend

./: Containerfile  LICENSE  README.md  main.py  pyproject.toml
app/: main.py
app/api/: endpoints.py
app/core/: config.py  schemas.py
app/services/: llm_service.py
